Geopublisher can now switch languages for the GUI and the atlas data mostly independent.